# ada-demo

./: .gitignore  CONTRIBUTORS.md  Dockerfile  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/api/: cache.py  crud.py  main.py
app/api/routes/: home.py  repositories.py
app/core/db/: database.py  models.py  schemas.py
integration-test/: Dockerfile  docker-compose.yaml  go.mod  go.sum
integration-test/cmd/integration-test/: demo_test.go
integration-test/cmd/mock-github/: main.go
tests/: conftest.py
tests/api/: test_cache.py
tests/api/routes/: test_repositories.py
tests/utils/: owner.py  repository.py  utils.py
