[tool.poetry]
name = "ada-demo"
version = "0.1.0"
description = ""
authors = ["Hubert Siwik <hsiwi@softserveinc.com>"]

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.30"
sqlmodel = "^0.0.18"
pytest = "^8.2.0"
httpx = "^0.27.0"
requests-mock = "^1.12.1"
pytest-httpx = "^0.30.0"
pytest-asyncio = "^0.23.6"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
